--- a/AndroidExample/app/src/main/res/navigation/nav_graph.xml
+++ b/AndroidExample/app/src/main/res/navigation/nav_graph.xml
@@ -7,13 +7,13 @@
 
     <fragment
             android:id="@+id/FirstFragment"
-            android:name="org.bziembanski.androidexample.FirstFragment"
+            android:name="org.bziembanski.androidexample.screens.first_screen.FirstFragment"
             android:label="@string/first_fragment_label"
             tools:layout="@layout/fragment_first"/>
 
     <fragment
             android:id="@+id/SecondFragment"
-            android:name="org.bziembanski.androidexample.SecondFragment"
+            android:name="org.bziembanski.androidexample.screens.second_screen.SecondFragment"
             android:label="@string/second_fragment_label"
             tools:layout="@layout/fragment_second"/>
 </navigation>
