list finish and person details

--- a/AndroidExample/app/src/main/res/layout/fragment_first.xml
+++ b/AndroidExample/app/src/main/res/layout/fragment_first.xml
@@ -4,20 +4,36 @@
         xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
                 name="viewModel"
                 type="org.bziembanski.androidexample.screens.first_screen.FirstViewModel" />
+
         <variable
                 name="adapter"
                 type="org.bziembanski.androidexample.screens.first_screen.PeopleAdapter" />
     </data>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".screens.first_screen.FirstFragment">
 
+        <ProgressBar
+                android:visibility="visible"
+                android:id="@+id/loader"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:indeterminate="true"
+                android:indeterminateTint="@color/design_default_color_primary"/>
+
         <androidx.recyclerview.widget.RecyclerView
+                android:visibility="gone"
                 android:id="@+id/peopleList"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -27,7 +43,6 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                />
+                app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
