--- a/AndroidExample/app/src/main/res/layout/activity_main.xml
+++ b/AndroidExample/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
                 android:layout_width="match_parent"
                 android:background="?attr/colorPrimary"
                 app:popupTheme="@style/Theme.AndroidExample.PopupOverlay"
-                android:layout_height="?attr/actionBarSize"/>
+                android:layout_height="?attr/actionBarSize" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -36,9 +36,10 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
                 app:defaultNavHost="true"
-                app:navGraph="@navigation/nav_graph"/>
+                app:navGraph="@navigation/bottom_nav_graph"/>
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:visibility="visible"
                 android:id="@+id/bottom_navigation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
