--- a/AndroidExample/app/src/main/res/layout/person_row.xml
+++ b/AndroidExample/app/src/main/res/layout/person_row.xml
@@ -19,15 +19,17 @@
             >
         <TextView
                 android:id="@+id/personsName"
+                android:textSize="16sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="12dp"
                 android:text="@{person.name}"/>
 
         <TextView
                 android:id="@+id/personsGender"
+                android:textSize="14sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
